--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -86,8 +86,8 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> - <b>(Entrega: 24/02)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li>Trabalho 2 <b>(Entrega: 24/03)</b></li>
+					<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> - <b>(Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a></i> - <b>(Entrega: 24/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li>Trabalho 3 <b>(Entrega: 14/04)</b></li>
 					<li>Vídeo <b>(Entrega: 14/04)</b></li>
 					</ul> 
