--- a/poo-lab.html
+++ b/poo-lab.html
@@ -174,7 +174,8 @@
 					<div>
 					<b>Links diversos:</b> 
 					<ul>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rNP9G_a_zlM"> Aula Síncrona Gravada - Prática 5 </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> -->
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gpK4z85E7NA"> Aula Síncrona Gravada - Prática 6 </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6a/src"> <i>Código da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>	
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ComparatorExample/src"> <i>Código com um exemplo do Comparator em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
