--- a/poo-lab.html
+++ b/poo-lab.html
@@ -175,14 +175,14 @@
 					<b>Links diversos:</b> 
 					<ul>
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gpK4z85E7NA"> Aula Síncrona Gravada - Prática 6 </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> -->
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6a/src"> <i>Código da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>	
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ComparatorExample/src"> <i>Código com um exemplo do Comparator em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho1_pc2.pdf"> Notas do Trabalho 1 (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho2_pc2.pdf"> Notas do Trabalho 2 (Atualizado em <b>05/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a></li> 					
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a></li>
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a></li> 									
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/CidadesDoBrasil/src"> <i>Código para lidar com HashMap em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/POOAulas/src"> <i>Pseudocódigo para exemplificar o comentário na rede social</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>					
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro (Trabalho 2)</a></li>
