--- a/poo-lab.html
+++ b/poo-lab.html
@@ -179,8 +179,8 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100589"> Aula Síncrona Gravada - Prática 3</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=101226"> Aula Síncrona Gravada - Prática 4</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=101832"> Aula Síncrona Gravada - Prática 5</a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=102984"> Aula Síncrona Gravada - Prática 6 (Parte 1)</a></li>	
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=104021"> Aula Síncrona Gravada - Prática 6 (Parte 2)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=102984"> Aula Síncrona Gravada - Prática 6</a></li>	
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=104021"> Aula Síncrona Gravada - Prática 6 (Continuação)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6a/src"> <i>Código da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>	
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ComparatorExample/src"> <i>Código com um exemplo do Comparator em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
