--- a/poo.html
+++ b/poo.html
@@ -101,8 +101,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 						
