--- a/poo.html
+++ b/poo.html
@@ -85,7 +85,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(09/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"><!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
-					<li>Prova 2 - 30 pts <b>(23/03)</b><!-- <i> Aulas 6, 7 e 8</i> --></li>
+					<li>Prova 2 - 30 pts <b>(23/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)</li>
 					<li>Prova 3 - 30 pts <b>(13/04)</b><!-- <i> Aulas 9, 10, 11 e 12</i> --></li>
 					<li>Lista 1 - 7,5 pts <b>(23/03)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
 					<li>Lista 2 - 7,5 pts <b>(13/04)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
