--- a/poo.html
+++ b/poo.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(09/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"><!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
+					<li>Prova 1 - 25 pts <b>(09/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
 					<li>Prova 2 - 30 pts <b>(23/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)</li>
 					<li>Prova 3 - 30 pts <b>(13/04)</b><!-- <i> Aulas 9, 10, 11 e 12</i> --></li>
 					<li>Lista 1 - 7,5 pts <b>(23/03)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
@@ -164,7 +164,7 @@
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
 					<!--<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> -->
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> -->
+					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					</ul>
 					</div> 
 				</div>
