--- a/poo-lab.html
+++ b/poo-lab.html
@@ -89,7 +89,6 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					
 					</ul>
 					</div> 
 					<div>
@@ -97,11 +96,8 @@
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
-					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <!--<a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
-					<li>Vídeo - 2,5 pts <b>(Entrega: 08/04)</b></li> 
-					<li>Exercícios Práticos - 7,5 pts <b>(Agendados pelo professor)</b></li>
-					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
-					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
+					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
+					<li>Exercícios Práticos - 10 pts <b>(Entrega: 30/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>  
 					<b>Material:</b> 
