--- a/poo-lab.html
+++ b/poo-lab.html
@@ -98,7 +98,7 @@
 					<li>Trabalho 1 - 30 pts <b>(01/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i> --></li>
 					<li>Trabalho 2 - 30 pts <b>(05/08)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i> --></li>
 					<li>Trabalho 3 - 30 pts <b>(02/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
-					<li>Vídeo - 10 pts <b>(02/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Exercícios Práticos - 10 pts <b>(02/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -108,7 +108,7 @@
 					<b>Material:</b> 
 					<div>
 						<ul>						
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)</li>
 						<!-- <li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
